--- a/style.css
+++ b/style.css
@@ -277,6 +277,11 @@ section {
   float: left;
 }
 
+section h1 {
+padding-top: 1em;
+margin-bottom: .5em;
+}
+
 section h3 {
  font-family:'Oswald', sans-serif;
   text-align: center;
