--- a/style.css
+++ b/style.css
@@ -1266,10 +1266,11 @@ ul.sub-menu {
 
 #copy {
 
+width: 33%;
 margin-top: 1em;
 margin-bottom:0;
-text-align: right;
-
+margin: auto;
+float: none;
 
 }
 
